<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="687dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/three"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/buttonDot"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="252dp"
            android:background="@drawable/btn_num"
            android:text="@string/seven"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/eight"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <Button
            android:id="@+id/button9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/nine"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toTopOf="@+id/button8" />

        <Button
            android:id="@+id/button11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_opr"
            android:text="@string/add"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toTopOf="@+id/button9" />

        <Button
            android:id="@+id/button12"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_opr"
            android:text="@string/min"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="@+id/button6" />

        <Button
            android:id="@+id/button13"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_opr"
            android:text="@string/mul"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3" />

        <Button
            android:id="@+id/button6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/six"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button5" />

        <Button
            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/four"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/five"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/button4" />

        <Button
            android:id="@+id/button1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/one"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/zero"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/buttonEql"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_opr"
            android:text="@string/equal"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/buttonDot"
            app:layout_constraintTop_toTopOf="@+id/buttonDot" />

        <Button
            android:id="@+id/button14"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_opr"
            android:text="@string/div"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/buttonEql"
            app:layout_constraintTop_toTopOf="@+id/buttonEql" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_num"
            android:text="@string/two"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="@+id/button1" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/btn_num"
            android:text="@string/dot"
            android:textSize="28sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toTopOf="@+id/button0" />

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_dc"
            android:text="@string/del"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toTopOf="@+id/button11" />

        <Button
            android:id="@+id/buttonClr"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_dc"
            android:text="@string/clr"
            android:textColor="#000000"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toTopOf="@+id/button12" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="191dp"
            android:layout_height="75dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/decimal" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="172dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:width="100dp"
                android:minWidth="100dp"
                android:text="@string/h"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:width="100dp"
                android:minWidth="100dp"
                android:text="@string/b"
                android:textAllCaps="false"
                android:textColor="#FAFAFA"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:width="100dp"
                android:checked="true"
                android:minWidth="100dp"
                android:text="@string/d"
                android:textColor="#FDFDFD"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="56dp"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>